# Aurelius

./: CMakeLists.txt  README.md
src/: main.cpp
src/include/: BufferService.h  CommandService.h  DeviceService.h  Engine.h  Mesh.h  PipelineService.h  SwapChainService.h  Vertex.h  WindowService.h
src/lib/: BufferService.cpp  CommandService.cpp  DeviceService.cpp  Engine.cpp  PipelineService.cpp  SwapChainService.cpp  WindowService.cpp
src/shaders/: frag.frag  vert.vert
src/struct/: Engine.cpp
